# PaloAltoNetworks

./: .env.example  .gitignore  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: StoryExperience.tsx
frontend/src/components/dashboard/: DashboardView.tsx
frontend/src/components/stages/: Stage01MeetEmily.tsx  Stage02ConnectData.tsx  Stage03Baseline.tsx  Stage04Correlations.tsx  Stage05Patterns.tsx  Stage06Anomaly.tsx  Stage07Explain.tsx  Stage08Recommendations.tsx  Stage09Architecture.tsx  Stage10Evaluation.tsx  Stage11Chat.tsx  (+1 more)
frontend/src/constants/: story.ts
frontend/src/data/: emilyMockData.ts
frontend/src/hooks/: useEngine.tsx  useStoryNavigation.ts
frontend/src/types/: api.ts  emily.ts
frontend/src/utils/: patternDescriptions.ts
scripts/: evaluate.py
src/health_engine/: __init__.py  models.py  pipeline.py
src/health_engine/anomaly/: __init__.py  baseline.py  detector.py
src/health_engine/api/: __init__.py  app.py  schemas.py
src/health_engine/chat/: __init__.py  advisor.py  context.py
src/health_engine/correlation/: __init__.py  lagged.py  multivariate.py
src/health_engine/data/: __init__.py  align.py  generator.py
src/health_engine/insights/: __init__.py  ranker.py
src/health_engine/patterns/: __init__.py  discovery.py  periodicity.py
tests/: test_anomaly.py  test_chat.py  test_correlation.py  test_eval.py  test_generator.py  test_patterns.py
(+16 files in other folders)
